css/style.css
/******************************************
/* CSS
/*******************************************/

/* Box Model Hack */
* {
  box-sizing: border-box;
}

.attribution {
  margin-top: auto;
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

.body {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-family: 'Hanken Grotesk', sans-serif;
}

.container {
  margin-top: auto;
  max-width: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 20px;
  min-height: 55%;
  box-shadow: 20px 10px 50px -20px hsla(234, 85%, 45%, 0.1);
}

.left-half {
  width: 50%;
  min-height: 100%;
  border-radius: 20px;
  background: rgb(120, 87, 255);
  background: linear-gradient(
    180deg,
    rgba(120, 87, 255, 1) 0%,
    rgba(46, 43, 233, 1) 79%
  );
  display: flex;
  flex-direction: column;
  align-items: center;
}

.right-half {
  width: 50%;
  min-height: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-left: 2em;
  gap: 1em;
}

.circle {
  height: 150px;
  width: 150px;
  border-radius: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: rgb(78, 33, 202);
  background: linear-gradient(
    180deg,
    rgba(78, 33, 202, 0.9) 0%,
    rgba(36, 33, 202, 0) 100%
  );
}

.circle span {
  font-size: 0.9em;
}

.circle h1 {
  font-size: 50px;
  margin-bottom: 0px;
}

.left-half p {
  text-align: center;
  width: 60%;
  line-height: 1.4em;
  color: rgb(200, 192, 255);
  font-size: 0.9em;
}

.left-half h2,
h1 {
  color: white;
}

.left-half h3 {
  margin-top: 30px;
  margin-bottom: 30px;
}

.left-half h3,
p,
.circle span {
  color: rgba(200, 192, 255);
}

.left-half h2 {
  margin-top: 30px;
  margin-bottom: 5px;
}

.right-half h4 {
  display: inline;
}
.right-half span,
.right-half h2 {
  color: hsl(224, 30%, 27%);
}

.right-half h2 {
  margin-bottom: 0.6em;
}
.right-half span {
  font-weight: bold;
}

.results {
  padding-bottom: 2em;
  height: 45px;
  width: 90%;
  padding: 1em;
  border-radius: 0.5em;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.reaction {
  color: rgb(247, 139, 139);
  background-color: hsla(0, 100%, 67%, 0.05);
}
.memory {
  color: rgb(232, 176, 57);
  background-color: hsla(39, 100%, 56%, 0.05);
}
.verbal {
  color: rgb(37, 158, 127);
  background-color: hsla(166, 100%, 37%, 0.05);
}
.visual {
  color: rgb(34, 38, 145);
  background-color: hsla(234, 85%, 45%, 0.05);
}

.nums {
  color: rgb(162, 157, 164);
}

.results i {
  font-size: 0.8em;
  padding-right: 0.8em;
}

.icondiv {
  display: flex;
  align-items: center;
}

.continue-btn {
  border-radius: 2em;
  border: 0;
  width: 90%;
  margin-top: 1em;
  margin-bottom: 2em;
  height: 3em;
  color: white;
  font-weight: bold;
  background: linear-gradient(
    180deg,
    rgba(120, 87, 255, 1) 0%,
    rgba(46, 43, 233, 1) 100%
  );
}

.continue-btn:hover {
  cursor: pointer;
}

@media only screen and (max-width: 415px) {
  .body {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100vw;
  }
  .container {
    max-width: 100%;

    display: flex;
    flex-direction: column;
  }
  .left-half {
    height: 1em;
    min-width: 100vw;
  }
  .right-half {
    min-width: 100vw;
  }
}
/******************************************
/* LAYOUT
/*******************************************/

/******************************************
/* ADDITIONAL STYLES
/*******************************************/

